included if statement in sessions controller to prevent app from breaking if logging in with user not found; changed visibility of login, logout, register depending on logged in or not

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,3 +50,13 @@
   width: 100%;
   height: 70%;
 }
+
+/* ============ */
+/* NAV */
+/* ============ */
+
+nav {
+  /* color: red; */
+  display: flex;
+  justify-content: space-around;
+}
